# liblogicalaccess

./: .travis.yml  CMakeLists.txt  pom.xml  proto_gen.sh
include/logicalaccess/iks/: IKSRPCClient.hpp  IslogKeyServer.hpp  RPCException.hpp  RemoteCrypto.hpp  signature.hpp
include/logicalaccess/iks/packet/: iks.grpc.pb.cc  iks.grpc.pb.h  iks.pb.cc  iks.pb.h
include/logicalaccess/services/accesscontrol/: accesscontrolcardservice.hpp
include/logicalaccess/services/accesscontrol/formats/: bithelper.hpp
include/logicalaccess/services/storage/: storagecardservice.hpp
plugins/logicalaccess/plugins/crypto/: cmac.cpp  signature_helper.cpp  signature_helper.hpp
plugins/logicalaccess/plugins/iks/: CMakeLists.txt  IKSRPCClient.cpp  IKSRPCClient.hpp  libraryentry.cpp
plugins/logicalaccess/plugins/lla-tests/: utils.cpp
scripts/: GenerateWin32BasicSolution.bat  GenerateWin32Solutions-debug.bat  GenerateWin32Solutions.bat  GenerateX64BasicSolution.bat  GenerateX64Solutions-debug.bat  GenerateX64Solutions.bat
src/: bufferhelper.cpp
src/dynlibrary/: librarymanager.cpp
src/iks/: IKSRPCClient.cpp  IslogKeyServer.cpp  signature.cpp
src/services/accesscontrol/: accesscontrolcardservice.cpp
tests/other/: CMakeLists.txt  test_iks_soft.cpp
tests/pcsc-tests/DESFireEV1/: CMakeLists.txt  test_access_control_iks.cpp  test_manual_changekey.cpp
tests/pcsc-tests/reader_techno/: test_change_uid.cpp
tests/unittest/: CMakeLists.txt  test_diversification.cpp  test_iks_bench.cpp  test_iks_signature.cpp  test_signature.cpp
(+5 files in other folders)
